try asyncmap to build pages

--- a/CwJ/alternatives/README
+++ b/CwJ/alternatives/README
@@ -4,5 +4,8 @@ There are many ways to do related things in `Julia`. This directory holds altern
 
 ## Symbolics
 
+* needs writing
+
 ## Makie
 
+* needs updating
