--- a/quarto/alternatives/plotly_plotting.qmd
+++ b/quarto/alternatives/plotly_plotting.qmd
@@ -1,33 +1,13 @@
 # JavaScript based plotting libraries
 
 
-```{julia}
-#| echo: false
+{{< include ../_common_code.qmd >}}
 
-import Logging
-Logging.disable_logging(Logging.Info) # or e.g. Logging.Info
-Logging.disable_logging(Logging.Warn)
+:::{.callout-note}
+## Not working with quarto
+Currently, the plots generated here are not rendering within quarto.
 
-import SymPy
-function Base.show(io::IO, ::MIME"text/html", x::T) where {T <: SymPy.SymbolicObject}
-    println(io, "<span class=\"math-left-align\" style=\"padding-left: 4px; width:0; float:left;\"> ")
-    println(io, "\\[")
-    println(io, sympy.latex(x))
-    println(io, "\\]")
-    println(io, "</span>")
-end
-
-# hack to work around issue
-import Markdown
-import CalculusWithJulia
-function CalculusWithJulia.WeaveSupport.ImageFile(d::Symbol, f::AbstractString, caption; kwargs...)
-    nm = joinpath("..", string(d), f)
-    u = "![$caption]($nm)"
-    Markdown.parse(u)
-end
-
-nothing
-```
+:::
 
 This section uses this add-on package:
 
