--- a/quarto/precalc/calculator.qmd
+++ b/quarto/precalc/calculator.qmd
@@ -733,7 +733,7 @@ numericq(val)
 ###### Question
 
 
-Wich of the following is a valid `Julia` expression for
+Which of the following is a valid `Julia` expression for
 
 
 $$
@@ -757,7 +757,7 @@ radioq(choices, answ)
 ###### Question
 
 
-Wich of the following is a valid `Julia` expression for
+Which of the following is a valid `Julia` expression for
 
 
 $$
@@ -1068,4 +1068,3 @@ choices = [
 answ=1
 radioq(choices, answ)
 ```
-
