--- a/quarto/ODEs/differential_equations.qmd
+++ b/quarto/ODEs/differential_equations.qmd
@@ -305,7 +305,7 @@ $$
 with initial conditions: $x(0) = y(0) = 0$ and $x'(0) = v_0 \cos(\theta), y'(0) = v_0 \sin(\theta)$.
 
 
-This into an ODE by a standard trick. Here we define our function for updating a step. As can be seen the vector `u` contains both $\langle x,y \rangle$ and $\langle x',y' \rangle$
+This is turned into an ODE by a standard trick. Here we define our function for updating a step. As can be seen the vector `u` contains both $\langle x,y \rangle$ and $\langle x',y' \rangle$
 
 
 ```{julia}
