Corrected spelling ('manger' to 'manager'

--- a/quarto/precalc/polynomial.qmd
+++ b/quarto/precalc/polynomial.qmd
@@ -136,7 +136,7 @@ Symbolic math programs include well-known ones like the commercial programs Math
 
 :::{.callout-note}
 ## Note
-When `SymPy` is installed through the package manger, the underlying `Python` libraries will also be installed.
+When `SymPy` is installed through the package manager, the underlying `Python` libraries will also be installed.
 
 :::
 
