--- a/quarto/precalc/variables.qmd
+++ b/quarto/precalc/variables.qmd
@@ -217,7 +217,7 @@ Julia allows variable names to use Unicode identifiers. Such names allow `julia`
 ϵ = 1e-10
 ```
 
-Entering Unicode names follows the pattern of "slash" + LaTeX name + `[tab]` key. Some other ones that are useful are `\delta[tab]`, `\alpha[tab]`, and `\beta[tab]`, though there are [hundreds](https://github.com/JuliaLang/julia/blob/master/stdlib/REPL/src/latex_symbols.jl) of other values defined.
+Entering Unicode names follows the pattern of "backslash" + LaTeX name + `[tab]` key. Some other ones that are useful are `\delta[tab]`, `\alpha[tab]`, and `\beta[tab]`, though there are [hundreds](https://github.com/JuliaLang/julia/blob/master/stdlib/REPL/src/latex_symbols.jl) of other values defined.
 
 
 For example, we could have defined `theta` (`\theta[tab]`) and `v0` (`v\_0[tab]`) using Unicode to make them match more closely the typeset math:
@@ -318,7 +318,7 @@ Let `x = 4`. Compute $y=100 - 2x - x^2$. What is the value:
 #| hold: true
 #| echo: false
 x = 4
-y =- 100 - 2x - x^2
+y = 100 - 2x - x^2
 numericq(y, 0.1)
 ```
 
