--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -78,4 +78,4 @@ mistake, or fixing a typo -- click the "Edit this page" link.
 
 ----
 
-Calculus with Julia version {{< meta version }}, produced on {{< meta
+Calculus with Julia version {{< meta version >}}, produced on {{< meta date>}}
