--- a/quarto/precalc/logical_expressions.qmd
+++ b/quarto/precalc/logical_expressions.qmd
@@ -47,7 +47,7 @@ The set of numeric comparisons is nearly the same as the mathematical counterpar
 
 :::{.callout-warning}
 ## Warning
-The use of `==` is necessary, as `=` is used for assignment and mutation.")
+The use of `==` is necessary, as `=` is used for assignment and mutation.
 
 :::
 
