--- a/quarto/alternatives/symbolics.qmd
+++ b/quarto/alternatives/symbolics.qmd
@@ -9,7 +9,7 @@ There are a few options in `Julia` for symbolic math, for example, the `SymPy` p
 ## About
 
 
-The `Symbolics` package bill itself as a "fast and modern Computer Algebra System (CAS) for a fast and modern programming language." This package relies on the `SymbolicUtils` package and is built upon by the `ModelingToolkit` package, which we don't describe here.
+The `Symbolics` package bills itself as a "fast and modern Computer Algebra System (CAS) for a fast and modern programming language." This package relies on the `SymbolicUtils` package and is built upon by the `ModelingToolkit` package, which we don't describe here.
 
 
 We begin by loading the `Symbolics` package which when loaded re-exports the `SymbolicUtils` package.
@@ -22,7 +22,7 @@ using Symbolics
 ## Symbolic variables
 
 
-Symbolic math at its core involves symbolic variables, which essentially defer evaluation until requested. The creation of symbolic variables differs between the two package discussed here.
+Symbolic math at its core involves symbolic variables, which essentially defer evaluation until requested. The creation of symbolic variables differs between the two packages discussed here.
 
 
 `SymbolicUtils` creates variables which carry `Julia` type information (e.g. `Int`, `Float64`, ...). This type information carries through operations involving these variables. Symbolic variables can be created with the `@syms` macro. For example
@@ -32,10 +32,10 @@ Symbolic math at its core involves symbolic variables, which essentially defer e
 @syms x y::Int f(x::Real)::Real
 ```
 
-This creates `x` a symbolic value with type `Number`, `y` a symbolic variable holding integer values, and `f` a symbolic function of a single real variable outputing a real variable.
+This creates `x` a symbolic value with symbolic type `Number`, `y` a symbolic variable holding integer values, and `f` a symbolic function of a single real variable outputting a real variable.
 
 
-The `symtype` function reveals the underlying type:
+The non-exported `symtype` function reveals the underlying type:
 
 
 ```{julia}
@@ -44,14 +44,14 @@ import Symbolics.SymbolicUtils: symtype
 symtype(x), symtype(y)
 ```
 
-For `y`, the symbolic type being real does not imply the `y` has a subtype of `Real`:
+For `y`, the symbolic type being real does not imply the type of `y` is a subtype of `Real`:
 
 
 ```{julia}
 isa(y, Real)
 ```
 
-We see that the function `f`, when called with `y` would return a value of (symbolic) type `Real`:
+We see that the function `f` when called with `y` would return a value of (symbolic) type `Real`:
 
 
 ```{julia}
@@ -68,7 +68,7 @@ f(x)
 
 :::{.callout-note}
 ## Note
-The `SymPy` package also has an `@syms` macro to create variables. Though they names agree, they do different things. Using both packages together would require qualifying many shared method names. For `SymbolicUtils`, the `@syms` macro uses `Julia` types to parameterize the variables. In `SymPy` it is possible to specify *assumptions* on the variables, but that is different and not useful for dispatch without some extra effort.
+The `SymPy` package also has an `@syms` macro to create variables. Though their names agree, they do different things. Using both packages together would require qualifying many shared method names. For `SymbolicUtils`, the `@syms` macro uses `Julia` types to parameterize the variables. In `SymPy` it is possible to specify *assumptions* on the variables, but that is different and not useful for dispatch without some extra effort.
 
 :::
 
@@ -137,7 +137,7 @@ typeof(sin(x)), typeof(Symbolics.value(sin(x)))
 ### Tree structure to expressions
 
 
-The `TermInterface` package is used by `SymbolicUtils` to explore the tree structdure of an expression. The main methods are (cf. [symbolicutils.jl](https://symbolicutils.juliasymbolics.org/#expression_interface)):
+The `TermInterface` package is used by `SymbolicUtils` to explore the tree structure of an expression. The main methods are (cf. [SymbolicUtils.jl](https://symbolicutils.juliasymbolics.org/#expression_interface)):
 
 
   * `istree(ex)`: `true` if `ex` is not a *leaf* node (like a symbol or numeric literal)
@@ -221,7 +221,7 @@ free_symbols(ex)
 ### Substitute
 
 
-The `substitute` command is used to replace values with other values. For examples:
+The `substitute` command is used to replace values with other values. For example:
 
 
 ```{julia}
@@ -260,7 +260,7 @@ substitute(ex, x=>π), substitute(ex, x=>π, fold=false)
 Algebraic operations with symbolic values can involve an exponentially increasing number of terms. As such, some simplification rules are applied after an operation to reduce the complexity of the computed value.
 
 
-For example, `0+x` should simplify to `x`, `0+x`, `x^0`, or `x^1` should simplify, to some natural answer.
+For example, `0+x` should simplify to `x`, as well `1*x`, `x^0`, or `x^1` should each simplify, to some natural answer.
 
 
 `SymbolicUtils` also [simplifies](https://symbolicutils.juliasymbolics.org/#simplification) several other expressions, including:
@@ -269,7 +269,7 @@ For example, `0+x` should simplify to `x`, `0+x`, `x^0`, or `x^1` should simplif
   * `-x` becomes `(-1)*x`
   * `x * x` becomes `x^2` (and `x^n` if more terms). Meaning this expression is represented as a power, not a product
   * `x + x` becomes `2*x` (and `n*x` if more terms). Similarly, this represented as a product, not a sum.
-  * `p/q * x` becomes `(p*x)/q)`, similarly `p/q * x/y` becomes `(p*x)/(q*y)`
+  * `p/q * x` becomes `(p*x)/q)`, similarly `p/q * x/y` becomes `(p*x)/(q*y)`. (Division wraps multiplication.)
 
 
 In `SymbolicUtils`, this *rewriting* is accomplished by means of *rewrite rules*. The package makes it easy to apply user-written rewrite rules.
@@ -278,7 +278,7 @@ In `SymbolicUtils`, this *rewriting* is accomplished by means of *rewrite rules*
 ### Rewriting
 
 
-Many algebraic simplifications are done by the `simplify` command. For example, the basic trignometric identities are applied:
+Many algebraic simplifications are done by the `simplify` command. For example, the basic trigonometric identities are applied:
 
 
 ```{julia}
@@ -307,11 +307,14 @@ ex1 = substitute(ex, x => sin(x + y + z))
 ex1 |> Symbolics.value |> r |> Num
 ```
 
-Rules involving two values are also easily created. This one, again, comes from the set of simplifications defined for trignometry and exponential simplifications:
+Rewrite rules when applied return the rewritten expression, if there is a match, or `nothing`.
+
+
+Rules involving two values are also easily created. This one, again, comes from the set of simplifications defined for trigonometry and exponential simplifications:
 
 
 ```{julia}
-r = @rule(exp(~x)^(~y) => exp(~x * ~y))
+r = @rule(exp(~x)^(~y) => exp(~x * ~y))  # (e^x)^y -> e^(x*y)
 ex = exp(-x+z)^y
 ex, ex |> Symbolics.value |> r |> Num
 ```
@@ -346,7 +349,7 @@ ex = exp(-x + z)^y
 Symbolics.toexpr(ex)
 ```
 
-This output shows an internal representation of the steps for computing the value `ex` given different inputs.
+This output shows an internal representation of the steps for computing the value `ex` given different inputs. (The number `(-1)` multiplies `x`, this is added to `z` and the result passed to `exp`. That values is then used as the base for `^` with exponent `y`.)
 
 
 Such `Julia` expressions are one step away from building `Julia` functions for evaluating symbolic expressions fast (though with some technical details about "world age" to be reckoned with). The `build_function` function with the argument `expression=Val(false)` will compile a `Julia` function:
@@ -376,7 +379,7 @@ The documentation colorfully says "`build_function` is kind of like if `lambdify
 The above, through passing $3$ variables after the expression, creates a function of $3$ variables. Functions of a vector of inputs can also be created, just by expressing the variables in that manner:
 
 
-```{juila}
+```{julia}
 h1 = build_function(ex, [x, y, z]; expression=Val(false))
 h1([1, 2, 3])  # not h1(1,2,3)
 ```
@@ -398,7 +401,7 @@ Roots.find_zero(λ, (1, 2))
 ### Plotting
 
 
-Using `Plots`, the plotting symbolic expressions is similar to the plotting of a function, as there is a plot recipe that converts the expression into a function via `build_function`.
+Using `Plots`, the plotting of symbolic expressions is similar to the plotting of a function, as there is a plot recipe that converts the expression into a function via `build_function`.
 
 
 For example,
@@ -451,7 +454,7 @@ For example
 d, r = polynomial_coeffs(a*x^2 + b*x + c, (x,))
 ```
 
-The first term output is dictionary who's keys are the monomials and who's values are the coefficients. The second term, the residual, is all the remaining parts of the expression, in this case just the constant `c`.
+The first term output is dictionary with keys which are the monomials and with values which are the coefficients. The second term, the residual, is all the remaining parts of the expression, in this case just the constant `c`.
 
 
 The expression can then be reconstructed through
@@ -461,7 +464,7 @@ The expression can then be reconstructed through
 r + sum(v*k for (k,v) ∈ d)
 ```
 
-The above has `a,b,c` as parameters and `x` as the symbol. This separation is designated by passing the desired polynomials symbols to `polynomial_coeff` as an iterable. (Above as a $1$-element tuple.)
+The above has `a,b,c` as parameters and `x` as the symbol. This separation is designated by passing the desired polynomial symbols to `polynomial_coeff` as an iterable. (Above as a $1$-element tuple.)
 
 
 More complicated polynomials can be similarly decomposed:
@@ -552,6 +555,69 @@ m,n = degree.(nd(ex))
 m > n ? "limit is infinite" : m < n ? "limit is 0" : "limit is a constant"
 ```
 
+### Vectors and matrices
+
+
+Symbolic vectors and matrices can be created with a specified size:
+
+
+```{julia}
+@variables v[1:3] M[1:2, 1:3] N[1:3, 1:3]
+```
+
+Computations, like finding the determinant below, are lazy unless the values are `collect`ed:
+
+
+```{julia}
+using LinearAlgebra
+det(N)
+```
+
+```{julia}
+det(collect(N))
+```
+
+Similarly, with `norm`:
+
+
+```{julia}
+norm(v)
+```
+
+and
+
+
+```{julia}
+norm(collect(v))
+```
+
+Matrix multiplication is also deferred, but the size compatability of the matrices and vectors is considered early:
+
+
+```{julia}
+M*N, N*N, M*v
+```
+
+This errors, as the matrix dimensions are not compatible for multiplication:
+
+
+```{julia}
+#| error: true
+N*M
+```
+
+Similarly, linear solutions can be symbolically specified:
+
+
+```{julia}
+@variables R[1:2, 1:2] b[1:2]
+R \ b
+```
+
+```{julia}
+collect(R \ b)
+```
+
 ### Algebraically solving equations
 
 
@@ -567,14 +633,33 @@ or
 
 
 ```{julia}
-ex = [5x + 2y, 6x + 3y] .~ [1, 2]
+eqs = [5x + 2y, 6x + 3y] .~ [1, 2]
 ```
 
 The `Symbolics.solve_for` function can solve *linear* equations. For example,
 
 
 ```{julia}
-Symbolics.solve_for(ex, [x, y])
+Symbolics.solve_for(eqs, [x, y])
+```
+
+The coefficients can be symbolic. Two examples could be:
+
+
+```{julia}
+@variables m b x y
+eq = y ~ m*x + b
+Symbolics.solve_for(eq, x)
+```
+
+```{julia}
+@variables a11 a12 a22 x y b1 b2
+R,X,b = [a11 a12; 0 a22], [x; y], [b1, b2]
+eqs = R*X .~ b
+```
+
+```{julia}
+Symbolics.solve_for(eqs, [x,y])
 ```
 
 ### Limits
@@ -591,26 +676,43 @@ As of writing, there is no extra functionality provided by `Symbolics` for compu
 
 ```{julia}
 @variables a b c x
-ex = a*x^2 + b*x + c
-Symbolics.derivative(ex, x)
+y = a*x^2 + b*x + c
+yp = Symbolics.derivative(y, x)
 ```
 
-The computation can also be broken up into an expression indicating the derivative and then a function to apply the derivative rules:
+Or to find a critical point:
+
+
+```{julia}
+Symbolics.solve_for(yp ~ 0, x) # linear equation to solve
+```
+
+The derivative computation can also be broken up into an expression indicating the derivative and then a function to apply the derivative rules:
 
 
 ```{julia}
 D = Differential(x)
-D(ex)
+D(y)
 ```
 
 and then
 
 
 ```{julia}
-expand_derivatives(D(ex))
+expand_derivatives(D(y))
 ```
 
-The differentials can be multiplied to create operators for taking higher-order derivatives:
+Using `Differential`, differential equations can be specified. An example was given in [ODEs](../ODEs/differential_equations.html), using `ModelingToolkit`.
+
+
+Higher order derivatives can be done through composition:
+
+
+```{julia}
+D(D(y)) |> expand_derivatives
+```
+
+Differentials can also be multiplied to create operators for taking higher-order derivatives:
 
 
 ```{julia}
@@ -628,7 +730,7 @@ In addition to `Symbolics.derivative` there are also the helper functions, such 
 Symbolics.hessian(ex, [x,y])
 ```
 
-The `gradient` function is also available
+The `gradient` function is also defined
 
 
 ```{julia}
@@ -637,13 +739,13 @@ ex = x^2 - 2x*y + z*y
 Symbolics.gradient(ex, [x, y, z])
 ```
 
-The `jacobian` takes an array of expressions:
+The `jacobian` function takes an array of expressions:
 
 
 ```{julia}
 @variables x y
-exs = [ x^2 - y^2, 2x*y]
-Symbolics.jacobian(exs, [x,y])
+eqs = [ x^2 - y^2, 2x*y]
+Symbolics.jacobian(eqs, [x,y])
 ```
 
 ### Integration
@@ -655,13 +757,15 @@ The `SymbolicNumericIntegration` package provides a means to integrate *univaria
 Symbolic integration can be approached in different ways. SymPy implements part of the Risch algorithm in addition to other algorithms. Rules-based algorithms could also be implemented.
 
 
-For example, here is a simple rule that could be used to integrate a single integral
+For a trivial example, here is a  rule that could be used to integrate a single integral
 
 
 ```{julia}
-is_var(x) = (xs = Symbolics.get_variables(x); length(xs) == 1 && xs[1] === x)
 @syms x ∫(x)
+
+is_var(x) = (xs = Symbolics.get_variables(x); length(xs) == 1 && xs[1] === x)
 r = @rule ∫(~x::is_var) => x^2/2
+
 r(∫(x))
 ```
 
@@ -671,22 +775,36 @@ The `SymbolicNumericIntegration` package includes many more predicates for doing
 If $f(x)$ is to be integrated, a set of *candidate* answers is generated. The following is **proposed** as an answer: $\sum q_i \Theta_i(x)$. Differentiating the proposed answer leads to a *linear system of equations* that can be solved.
 
 
-The example in the [paper](https://arxiv.org/pdf/2201.12468v2.pdf) describing the method is with $f(x) = x \sin(x)$ and the candidate thetas are ${x, \sin(x), \cos(x), x\sin(x), x\cos(x)}$ so that we propose:
+The example in the [paper](https://arxiv.org/pdf/2201.12468v2.pdf) describing the method is with $f(x) = x \sin(x)$ and the candidate thetas are ${x, \sin(x), \cos(x), x\sin(x), x\cos(x)}$ so that the propose answer is:
 
 
 $$
 \int f(x) dx = q_1 x + q_2 \sin(x) + q_3 \cos(x) + q_4 x \sin(x) + q_4 x \cos(x)
 $$
 
-Differentiating both sides, yields a term $x\sin(x)$ on the left, and equating coefficients gives:
+We differentiate the right hand side:
+
+
+```{julia}
+@variables q[1:5] x
+ΣqᵢΘᵢ = dot(collect(q), (x, sin(x), cos(x), x*sin(x), x*cos(x)))
+simplify(Symbolics.derivative(ΣqᵢΘᵢ, x))
+```
+
+This must match $x\sin(x)$ so we have by equating coefficients of the respective terms:
 
 
 $$
-q_1 = q_4 = 0,\quad q_5 = -1, \quad q_4 - q_3 = q_2 - q_5 = 0
+q_2 + q_5 = 0, \quad q_4 = 0, \quad q_1 = 0, \quad q_3 = 0, \quad q_5 = -1
 $$
 
-which can be solved with $q_5=-1$, $q_2=1$, and the other coefficients being $0$. That is $\int f(x) dx = 1 \sin(x) + (-1) x\cos(x)$.
+That is $q_2=1$, $q_5=-1$, and the other coefficients are $0$, giving an answer computed with:
 
+
+```{julia}
+d = Dict(q[i] => v for (i,v) ∈ enumerate((0,1,0,0,-1)))
+substitute(ΣqᵢΘᵢ, d)
+```
 
 The package provides an algorithm for the creation of candidates and the means to solve when possible. The `integrate` function is the main entry point. It returns three values: `solved`, `unsolved`, and `err`. The `unsolved` is the part of the integrand which can not be solved through this package. It is  `0` for a given problem when `integrate` is successful in identifying an antiderivative, in which case `solved` is the answer. The value of `err` is a bound on the numerical error introduced by the algorithm.
 
@@ -701,7 +819,7 @@ using SymbolicNumericIntegration
 integrate(x * sin(x))
 ```
 
-The second term is `0`, as this has an identified antiderivative.
+The second term is `0`, as this integrand has an identified antiderivative.
 
 
 ```{julia}
@@ -724,6 +842,9 @@ The derivative of `u` matches up to some numeric tolerance:
 ```{julia}
 Symbolics.derivative(u, x) - sin(x)^5
 ```
+
+---
+
 
 The integration of rational functions (ratios of polynomials) can be done algorithmically, provided the underlying factorizations can be identified. The `SymbolicNumericIntegration` package has a function `factor_rational` that can identify factorizations.
 
@@ -758,14 +879,14 @@ u = 1 / expand((x^2+1)*(x-2)^2)
 v = factor_rational(u)
 ```
 
-As such, the integrals have numeric differences:
+As such, the integrals have numeric differences from their mathematical counterparts:
 
 
 ```{julia}
 a,b,c = integrate(u)
 ```
 
-We can see a bit of why through the following which needs a tolerance set to identify the rational numbers correctly:
+We can see a bit of how much through the following, which needs a tolerance set to identify the rational numbers of the mathematical factorization correctly:
 
 
 ```{julia}
