--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -74,7 +74,7 @@ being allowed per notebook, there is frequent use of
 [Unicode](./misc/unicode.html) symbols for variable names.
 
 To contribute -- say by suggesting addition topics, correcting a
-mistake, or fixing a typo -- click the "Edit this page" link.
+mistake, or fixing a typo -- click the "Edit this page" link and join the list of [contributors](https://github.com/jverzani/CalculusWithJuliaNotes.jl/graphs/contributors).
 
 ----
 
