remove readthedocs references

--- a/quarto/precalc/julia_overview.qmd
+++ b/quarto/precalc/julia_overview.qmd
@@ -321,7 +321,7 @@ log
 ### Built-in functions
 
 
-`Julia` has numerous built-in [mathematical](http://julia.readthedocs.io/) functions, we review a few here:
+`Julia` has numerous built-in [mathematical](https://docs.julialang.org/en/v1/manual/mathematical-operations/) functions, we review a few here:
 
 
 #### Powers logs and roots
@@ -631,5 +631,3 @@ plot(64 - (1/2)*32 * x^2, 0, 2)
   * SymPy has functions for manipulating expressions: `simplify`, `expand`, `together`, `factor`, `cancel`, `apart`,  $...$
   * SymPy has functions for basic math: `factor`, `roots`, `solve`, `solveset`, $\dots$
   * SymPy has functions for calculus: `limit`, `diff`, `integrate`, $\dots$
-
-
