--- a/quarto/precalc/logical_expressions.qmd
+++ b/quarto/precalc/logical_expressions.qmd
@@ -269,7 +269,7 @@ A,B = true, false  ## also true, true; false, true; and false, false
 ## Precedence
 
 
-The question of when parentheses are needed and when they are not is answered by the [precedence](http://julia.readthedocs.org/en/latest/manual/mathematical-operations/#operator-precedence)  rules implemented. Earlier, we wrote
+The question of when parentheses are needed and when they are not is answered by the [precedence](https://docs.julialang.org/en/v1/manual/mathematical-operations/#Operator-Precedence-and-Associativity)  rules implemented. Earlier, we wrote
 
 
 ```{julia}
@@ -625,4 +625,3 @@ In the manual we can read that "In the expression `a && b`, the subexpression `b
 answ = 1
 radioq(choices, answ)
 ```
-
