--- a/quarto/precalc/ranges.qmd
+++ b/quarto/precalc/ranges.qmd
@@ -233,7 +233,7 @@ x = [0, 2, 4, 6, 8, 10]
 That is of course only part of the set of even numbers we want. Creating more might be tedious were we to type them all out, as above. In such cases, it is best to *generate* the values.
 
 
-For this simple case, a range can be used, but more generally a [comprehension](http://julia.readthedocs.org/en/latest/manual/arrays/#comprehensions) provides this ability using a construct that closely mirrors  a set definition, such as $\{2k: k=0, \dots, 50\}$. The simplest use of a comprehension takes this form (as we described in the section on vectors):
+For this simple case, a range can be used, but more generally a [comprehension](https://docs.julialang.org/en/v1/manual/arrays/#man-comprehensions) provides this ability using a construct that closely mirrors  a set definition, such as $\{2k: k=0, \dots, 50\}$. The simplest use of a comprehension takes this form (as we described in the section on vectors):
 
 
 `[expr for variable in collection]`
@@ -673,4 +673,3 @@ The [product](http://en.wikipedia.org/wiki/Arithmetic_progression) of the terms 
 val = prod(1:2:19)
 numericq(val)
 ```
-
