--- a/quarto/precalc/transformations.qmd
+++ b/quarto/precalc/transformations.qmd
@@ -339,7 +339,7 @@ The von Bertanlaffy growth [equation](http://www.fao.org/docrep/W5449e/w5449e05.
 ##### Example: the pipeline operator
 
 
-In the last example, we described our sequence as scale, over, stretch, and up, but code this in reverse order, as the composition $f \circ g$ is done from right to left. A more convenient notation would be to have syntax that allows the composition of $g$ then $f$ to be written $x \rightarrow g \rightarrow f$. `Julia` provides the [pipeline](http://julia.readthedocs.org/en/latest/stdlib/base/#Base.|>) operator for chaining function calls together.
+In the last example, we described our sequence as scale, over, stretch, and up, but code this in reverse order, as the composition $f \circ g$ is done from right to left. A more convenient notation would be to have syntax that allows the composition of $g$ then $f$ to be written $x \rightarrow g \rightarrow f$. `Julia` provides the [pipeline](https://docs.julialang.org/en/v1/manual/functions/#Function-composition-and-piping) operator for chaining function calls together.
 
 
 For example, if $g(x) = \sqrt{x}$ and $f(x) =\sin(x)$ we could call $f(g(x))$ through:
@@ -645,4 +645,3 @@ q"S(D(f))(n) = f(n) - f(0)"
 answ = 1
 radioq(choices, answ, keep_order=true)
 ```
-
