--- a/quarto/precalc/vectors.qmd
+++ b/quarto/precalc/vectors.qmd
@@ -407,7 +407,7 @@ The last value of a vector is usually denoted by $v_n$. In `Julia`, the `length`
 
 :::{.callout-note}
 ## More on indexing
-There is [much more](http://julia.readthedocs.org/en/latest/manual/arrays/#indexing) to indexing than just indexing by a single integer value. For example, the following can be used for indexing:
+There is [much more](https://docs.julialang.org/en/v1/manual/arrays/#man-array-indexing) to indexing than just indexing by a single integer value. For example, the following can be used for indexing:
 
   * a scalar integer (as seen)
   * a range
@@ -990,4 +990,3 @@ q"zs^(1./2)"
 answ = 2
 radioq(choices, answ, keep_order=true)
 ```
-
