Transformations chapter edits.

--- a/quarto/precalc/transformations.qmd
+++ b/quarto/precalc/transformations.qmd
@@ -219,7 +219,7 @@ plot(𝒇, -2, 2, label="f")
 plot!(scale(𝒇, 2), label="scale")
 ```
 
-Scaling by $2$ shrinks the non-zero domain, scaling by $1/2$ would stretch it. If this is not intuitive, the defintion `x-> f(x/c)` could have been used, which would have opposite behaviour for scaling.
+Scaling by $2$ shrinks the non-zero domain, scaling by $1/2$ would stretch it. If this is not intuitive, the definition `x-> f(x/c)` could have been used, which would have opposite behaviour for scaling.
 
 
 ---
@@ -333,7 +333,7 @@ This is off by a fair amount - almost $12$ minutes. Clearly a trigonometric mode
 ##### Example: a growth model in fisheries
 
 
-The von Bertanlaffy growth [equation](http://www.fao.org/docrep/W5449e/w5449e05.htm) is $L(t) =L_\infty \cdot (1 - e^{k\cdot(t-t_0)})$. This family of functions can be viewed as a transformation of the exponential function $f(t)=e^t$. Part is a scaling and shifting (the $e^{k \cdot (t - t_0)}$) along with some shifting and stretching. The various parameters have physical importance which can be measured: $L_\infty$ is a carrying capacity for the species or organism, and $k$ is a rate of growth. These parameters may be estimated from data by finding the "closest" curve to a given data set.
+The von Bertalanffy growth [equation](http://www.fao.org/docrep/W5449e/w5449e05.htm) is $L(t) =L_\infty \cdot (1 - e^{k\cdot(t-t_0)})$. This family of functions can be viewed as a transformation of the exponential function $f(t)=e^t$. Part is a scaling and shifting (the $e^{k \cdot (t - t_0)}$) along with some shifting and stretching. The various parameters have physical importance which can be measured: $L_\infty$ is a carrying capacity for the species or organism, and $k$ is a rate of growth. These parameters may be estimated from data by finding the "closest" curve to a given data set.
 
 
 ##### Example: the pipeline operator
