edits in alternatives

--- a/quarto/alternatives.qmd
+++ b/quarto/alternatives.qmd
@@ -2,7 +2,7 @@
 
 These notes use a particular selection of packages. This selection could have been different. For example:
 
-* The symbolic math is provided by `SymPy`. [Symbolics](./alternatives/Symbolics.html) (along with `SymbolicUtils` and `ModelingToolkit`) provides an alternative.
+* The symbolic math is provided by `SymPy`. [Symbolics](./alternatives/symbolics.html) (along with `SymbolicUtils` and `ModelingToolkit`) provides an alternative.
 
 * The finding of zeros of scalar-valued, univariate functions is done with `Roots`. The [NonlinearSolve](./alternatives/SciML.html#nonlinearsolve) package provides an alternative for univariate and multi-variate functions.
 
